# url-uploader

./: .env.example  .env.sample  .gitignore  Cargo.toml  README.md  package.json
src/: bot.rs  bot.ts  command.rs  config.ts  handlers.ts  index.ts  main.rs
src/utils/: URLcheck.ts  uploadFromURL.ts
