[package]
name = "url-uploader"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-read-progress = "0.2.0"
bytesize = "1.3"
chrono = "0.4"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
grammers-client = { version = "0.7.0", features = ["html"] }
grammers-mtsender = "0.7.0"
grammers-session = "0.7.0"
log = "0.4.28"
mime_guess = "2.0"
percent-encoding = "2.3"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "stream",
    "brotli",
    "gzip",
    "deflate",
] }
scopeguard = "1.2.0"
simplelog = "0.12.2"
stream-cancel = "0.8.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat", "io"] }
